<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaiMai</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_id">帳號</string>
    <string name="password">密碼</string>
    <string name= "email">電子信箱</string>
    <string name="sign_up">註冊</string>
    <string name="log_in">登入</string>
    <string name="log_out">登出</string>
    <string name="price">商品價格: </string>
    <string name="post">Post</string>
    <string name="name">商品名稱: </string>
    <string name="payment">付款方式 </string>
    <string name="delivery">交貨地點 </string>
    <string name="description">商品資訊: </string>
    <string name="action_ok">OK, Next Step!</string>

    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_activity_posting_page">PostingPageActivity</string>
    <string name="title_activity_item_page">ItemPageActivity</string>
    
    <string name="action_search">Search</string>
    <string name="action_video">Take a Video</string>
    
    <string name="item_name">item name</string>
    <string name="item_NT">NT$</string>
    <string name="item_price">item price</string>
    <string name="item_description">item description</string>
    <string name="posting_color">幫你的商品加入一種顏色</string>
    <string name="posting_name">請輸入商品名稱</string>
    <string name="posting_price">請輸入商品價格</string>
    <string name="posting_description">請輸入商品敘述</string>
    <string name="posting_payment">請輸入付款方式</string>
    <string name="posting_delivery">請輸入交貨地點</string>
    <string name="sold_out">已售出</string>
    <string name="delete">刪除</string>
    <string name="seller">賣家</string>
    <string name="email_to_seller">Email給賣家</string>

    <string-array name="payment_methods">
        <item>現金面交</item>
    </string-array>
    <string-array name="delivery_methods">
        <item>10F</item>
        <item>11F</item>
        <item>12F</item>
        <item>13F</item>
        <item>14F</item>
        <item>15F</item>
        <item>16F</item>
    </string-array>
    <string-array name="color_tag">
        <item>趣味黃</item>
        <item>專業藍</item>
        <item>樂活綠</item>
        <item>甜美粉</item>
        <item>時尚紫</item>
        <item>文青灰</item>
    </string-array>

</resources>