<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
      
    <EditText 
        android:id= "@+id/edit_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint ="@string/user_id"
        android:textColor="@color/text_gray" />
    
    <EditText 
        android:id= "@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_user_id"
        android:hint="@string/password"
        android:textColor="@color/text_gray" />
    
    <CheckBox 
        android:id= "@+id/save_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/edit_password" />
    
    <Button 
        android:id= "@+id/log_in_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/save_log_in"/>
    
    <TextView 
        android:id= "@+id/to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_in_ok"
        android:text= "@string/sign_up"
        android:textColor="@color/text_dark"
        android:textSize="20sp" />
    
</RelativeLayout>