<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/posting_page_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:scaleType="fitCenter" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:id="@+id/posting_page_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/posting_page_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/posting_name"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/posting_page_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/posting_page_name_layout"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/posting_page_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/posting_price"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/posting_page_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/posting_page_price_layout"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/posting_page_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/posting_description"
                    android:inputType="textMultiLine"
                    android:minLines="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/posting_page_payment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/posting_page_description_layout"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posting_payment"
                    android:textColor="@color/text_dark"
                    android:textSize="20sp" />

                <!--
                <Button
                    android:id="@+id/posting_page_payment_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                -->

                <GridView
                    android:id="@+id/posting_page_payment_grid"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:horizontalSpacing="5dp"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp" >
                </GridView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/posting_page_delivery_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/posting_page_payment_layout"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posting_delivery"
                    android:textColor="@color/text_dark"
                    android:textSize="20sp" />

                <!--
                <Button
                    android:id="@+id/posting_page_delivery_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                -->

                <GridView
                    android:id="@+id/posting_page_delivery_grid"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:horizontalSpacing="5dp"
                    android:numColumns="5"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp" >
                </GridView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>